# aquavm

./: .gitignore  .gitmodules  .repl_history  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Config.toml  README.md  crates.js  help.html  index.html  linker_command  next-hardfork-changes.md  rust-toolchain.toml  search-index.js  settings.html  src-files.js
air/: CHANGELOG.md  Cargo.toml  README.md  all.html  enum.Subcommand.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html  tracing_benches.sh
air-beautify/: Cargo.toml
air-interpreter/: CHANGELOG.md  Cargo.toml
air-interpreter/src/: ast.rs  fce.rs  logger.rs  marine.rs  wasm_bindgen.rs
air/beautify/: fn.beautify.html  fn.build_output.html  fn.read_script.html  index.html  sidebar-items.js  struct.Args.html
air/benches/: PERFORMANCE.json  call_benchmark.rs  chat_benchmark.rs  create_service_benchmark.rs  data_big_benchmark.rs  data_long_benchmark.rs  nox_tc2_benchmark.rs
air/benches/data/: anomaly_big.json  anomaly_long.json  big.air
air/data/: enum.Mode.html  fn.create_runner.html  fn.init_tracing.html  fn.to_human_readable_data.html  index.html  sidebar-items.js  struct.Args.html  struct.ModeArgs.html
air/src/: air.rs  aqua.rs  human_readable_data.rs  lib.rs  log_targets.rs  runner.rs  signing_step.rs  verification_step.rs
air/src/air/: outcome.rs
air/src/build_targets/: fce_target.rs  marine_target.rs  mod.rs  wasm_bindgen_target.rs
air/src/contexts/: execution_context.rs  execution_trace_context.rs  mod.rs
air/src/execution/: errors.rs  joinable.rs  mod.rs
air/src/execution_step/: errors.rs  joinable.rs  mod.rs
air/src/farewell_step/: errors.rs  mod.rs  outcome.rs
air/src/preparation/: data_merging.rs  errors.rs  mod.rs  preparation.rs  tests.rs
air/src/preparation_step/: errors.rs  interpreter_versions.rs  minimal_supported_version.rs  mod.rs  preparation.rs  sizes_limits_check.rs
air/src/runner/: outcome.rs
air/src/utils/: error_codes.rs  mod.rs  to_error_code.rs
air/src/verification_step/: mod.rs
air/tests/: air_basic.rs  call_evidence_basic.rs  dashboard.rs  data_merge.rs  flattening.rs  join.rs  join_behaviour.rs  last_error.rs  network_explore.rs  security_tetraplets.rs
air/tests/scripts/: inner_folds_v1.clj
air/tests/test_module/: build_test_binaries.sh  main.rs
air/trace/: index.html  sidebar-items.js
air/trace/run/: enum.Mode.html  enum.Source.html  fn.create_runner.html  fn.init_tracing.html  fn.load_data.html  fn.load_data_or_default.html  fn.load_keypair_ed25519.html  fn.read_call_results.html  fn.run.html  index.html  sidebar-items.js  struct.Args.html  struct.Keys.html  struct.ModeArgs.html
air/trace/stats/: fn.print_log_record.html  fn.read_logs.html  fn.stats.html  index.html  sidebar-items.js  struct.Args.html
air/trace/utils/: fn.parse_tracing_duration.html  fn.unix_timestamp_now.html  index.html  sidebar-items.js
avm/interface/: CHANGELOG.md  Cargo.toml
avm/interface/src/: call_request_parameters.rs  call_service_result.rs  lib.rs  outcome.rs  particle_parameters.rs  raw_outcome.rs  runtime_parameters.rs
avm/server/: CHANGELOG.md  Cargo.toml
avm/server/src/: avm.rs  avm_runtime_limits.rs  call_service.rs  config.rs  data_storable.rs  data_store.rs  errors.rs  lib.rs  outcome.rs  runner.rs  runtime_limits.rs
crates/air-interpreter-wasm/: .gitignore  Cargo.toml  build.rs
crates/air-interpreter-wasm/src/: lib.rs
crates/air-lib/air-parser/: CHANGELOG.md  Cargo.toml  build.rs
crates/air-lib/execution-context/: Cargo.toml
crates/air-lib/execution-info-collector/: CHANGELOG.md  Cargo.toml
crates/air-lib/interpreter-cid/: CHANGELOG.md  Cargo.toml
crates/air-parser/: Cargo.toml  build.rs
crates/air-parser/benches/: parser.rs
crates/air-parser/src/: aqua.lalrpop  aqua.pest  aqua.rs  ast.rs  lalrpop.rs  lib.rs  peg.rs
crates/beautifier/: CHANGELOG.md  Cargo.toml
crates/beautifier/src/: beautifier.rs  lib.rs  tests.rs  virtual.rs
crates/data-store/: CHANGELOG.md  Cargo.toml
crates/data-store/src/: lib.rs
crates/interpreter-interface/: Cargo.toml
crates/interpreter-interface/src/: call_request_parameters.rs  call_service_result.rs  interpreter_data.rs  interpreter_outcome.rs  lib.rs  run_parameters.rs
crates/interpreter-wasm/: Cargo.toml  build.rs
crates/polyplets/: Cargo.toml
crates/polyplets/src/: tetraplet.rs  triplet.rs
crates/stepper-interface/: Cargo.toml
crates/stepper-interface/src/: lib.rs
crates/stepper-lib/: Cargo.toml
crates/stepper-lib/src/: errors.rs  lib.rs  log_targets.rs
crates/stepper-lib/tests/: air_basic.rs  call_evidence_basic.rs  data_merge.rs  join.rs
crates/test-module/: Cargo.toml
crates/test-module/src/: main.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: call_services.rs  executed_state.rs  lib.rs  test_runner.rs
crates/testing-framework/: CHANGELOG.md  Cargo.toml
crates/testing-framework/src/: lib.rs  queue.rs
interpreter/: Cargo.toml
interpreter/src/: ast.rs  fce.rs  logger.rs  wasm_bindgen.rs
junk/bench_rkyv_wasm/: Cargo.toml
junk/bench_rkyv_wasm/src/: main.rs
junk/cidify/: Cargo.toml  anomaly_big.json
junk/cidify/src/: main.rs
junk/gen-bench-data/: Cargo.toml  README  gen_benchmark_data.sh  mem_consumption_lense.air.tmpl  reindent.py
junk/gen-bench-data/src/: calls.rs  canon_map_key_by_lens.air.tmpl  dashboard.rs  (+19 more)
junk/gen_test_data/: Cargo.toml
junk/keypair_gen/: Cargo.toml
stepper/: Cargo.toml
stepper-lib/: Cargo.toml
stepper-lib/benches/: call_benchmark.rs  chat_benchmark.rs  create_service_benchmark.rs
stepper-lib/src/: aqua.rs  errors.rs  execution.rs  lib.rs  log_targets.rs  security_tetraplet.rs  stepper_outcome.rs
stepper-lib/tests/: air_basic.rs  build_test_binaries.sh  call_evidence_basic.rs  dashboard.rs  data_merge.rs  join.rs  last_error.rs  network_explore.rs  security_tetraplets.rs
stepper/src/: ast.rs  defines.rs  errors.rs  execution.rs  fce.rs  logger.rs  logger_target_map.rs  stepper_outcome.rs  wasm_bindgen.rs
stepper/tests/: air_basic.rs  basic.rs  call_evidence_basic.rs  data_merge.rs  join.rs
(+2497 files in other folders)
