[workspace]
members = [
    "air",
    "air-interpreter",
    "avm/interface",
    "avm/server",
    "crates/air-lib/air-parser",
    "crates/air-lib/execution-info-collector",
    "crates/air-lib/interpreter-cid",
    "crates/air-lib/interpreter-data",
    "crates/air-lib/interpreter-interface",
    "crates/air-lib/lambda/ast",
    "crates/air-lib/lambda/parser",
    "crates/air-lib/log-targets",
    "crates/air-lib/polyplets",
    "crates/air-lib/test-utils",
    "crates/air-lib/trace-handler",
    "crates/air-lib/utils",
    "crates/beautifier",
    "crates/data-store",
    "crates/testing-framework",
    "tools/cli/air-beautify",
    "tools/cli/air-trace",
    "tools/wasm/air-beautify-wasm",
]

exclude = [
    "air/tests/test_module/integration/security_tetraplets/auth_module",
    "air/tests/test_module/integration/security_tetraplets/log_storage",
    "crates/interpreter-wasm",
    "junk",
]

[profile.release]
opt-level = 3
# since the interpreter in actively development stage, these settings are true at least for a while
debug = true
overflow-checks = true
debug-assertions = false
panic = "unwind"

[patch.crates-io]
polyplets = { path = "crates/air-lib/polyplets" }
fluence-app-service = {version = "0.23.0", branch = "marine-web-milestone2", git = "https://github.com/fluencelabs/marine"}
marine-runtime = {version = "0.24.0", branch = "marine-web-milestone2", git = "https://github.com/fluencelabs/marine"}
wasmer-it = { git = "https://github.com/fluencelabs/interface-types", branch = "feat/add-store", package = "wasmer-interface-types-fl", version = "0.25.0" }
it-memory-traits = {  git = "https://github.com/fluencelabs/interface-types", branch = "feat/add-store", package = "it-memory-traits", version = "0.3.1" }
it-lilo = { git = "https://github.com/fluencelabs/interface-types", branch = "feat/add-store", package = "it-lilo", version = "0.4.1"}
fluence-it-types = {  git = "https://github.com/fluencelabs/interface-types", branch = "feat/add-store", package = "fluence-it-types", version = "0.3.1" }