[workspace]
members = [
    "air",
    "air-interpreter",
    "avm/interface",
    "avm/server",
    "crates/air-lib/air-parser",
    "crates/air-lib/execution-info-collector",
    "crates/air-lib/interpreter-cid",
    "crates/air-lib/interpreter-data",
    "crates/air-lib/interpreter-interface",
    "crates/air-lib/interpreter-signatures",
    "crates/air-lib/lambda/ast",
    "crates/air-lib/lambda/parser",
    "crates/air-lib/log-targets",
    "crates/air-lib/polyplets",
    "crates/air-lib/test-utils",
    "crates/air-lib/trace-handler",
    "crates/air-lib/utils",
    "crates/beautifier",
    "crates/data-store",
    "crates/testing-framework",
    "tools/cli/air",
    "tools/wasm/air-beautify-wasm",
]

exclude = [
    "air/tests/test_module/integration/security_tetraplets/auth_module",
    "air/tests/test_module/integration/security_tetraplets/log_storage",
    "crates/interpreter-wasm",
    "junk",
]

[profile.release]
opt-level = 3
# since the interpreter in actively development stage, these settings are true at least for a while
debug = true
overflow-checks = true
debug-assertions = false
panic = "unwind"

[patch.crates-io]
marine-runtime = { version = "0.30.0", git = "https://github.com/fluencelabs/marine", branch = "feat/it-with-error-propagation"}
fluence-app-service = { version = "0.29.0", git = "https://github.com/fluencelabs/marine", branch = "feat/it-with-error-propagation"}
wasmer-it = { version = "0.26.1", package = "wasmer-interface-types-fl", branch = "feat/error-propagation", git = "https://github.com/fluencelabs/interface-types" }
it-lilo = { version = "0.5.1", branch = "feat/error-propagation", git = "https://github.com/fluencelabs/interface-types" }
it-memory-traits = { version = "0.4.0", branch = "feat/error-propagation", git = "https://github.com/fluencelabs/interface-types" }
fluence-it-types = { version = "0.4.1", branch = "feat/error-propagation", git = "https://github.com/fluencelabs/interface-types" }
