[package]
name = "air-beautify"
version = "0.1.0"
edition = "2021"
description = "AIR human-readable format transformer binary"
authors = ["Fluence Labs"]
license = "Apache-2.0"
publish = false
keywords = ["fluence", "air", "programming-language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beautifier = { path = "../crates/beautifier" }
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.56"
