[package]
name = "air-interpreter"
version = "0.37.0"
description = "Crate-wrapper for air"
authors = ["Fluence Labs"]
edition = "2018"
publish = false
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air_interpreter_client"
crate-type = ["cdylib"]
path = "src/wasm_bindgen.rs"

[[bin]]
name = "air_interpreter_server"
path = "src/marine.rs"

[dependencies]
aquavm-air = { version = "0.37.0", path = "../air" }
air-interpreter-interface = { version = "0.12.1", path = "../crates/air-lib/interpreter-interface" }
air-log-targets = { version = "0.1.0", path = "../crates/air-lib/log-targets" }

marine-rs-sdk = { version = "0.7.1", features = ["logger"] }

wasm-bindgen = "=0.2.82"

log = "0.4.17"
serde = { version = "1.0.155", features = [ "derive", "rc" ] }
serde_json = "1.0.94"
tracing = "0.1.37"
# exclude tracing-log feature that interferes with the log crate:
tracing-subscriber = { version = "0.3.16", default-features = false, features = [ "env-filter", "json", "smallvec", "time", "fmt" ] }

[features]
# indicates that this library should be compiled for the marine target,
# otherwise it will be compiled for the wasm bindgen target
marine = []
