[package]
name = "air"
version = "0.32.0"
description = "Interpreter of AIR scripts intended to coordinate request flow in the Fluence network"
authors = ["Fluence Labs"]
edition = "2018"
repository = "https://github.com/fluencelabs/aquavm"
publish = false
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air"
path = "src/lib.rs"
doctest = false

[dependencies]
air-parser = { path = "../crates/air-lib/air-parser" }
air-execution-info-collector = { path = "../crates/air-lib/execution-info-collector" }
air-interpreter-data = { path = "../crates/air-lib/interpreter-data" }
air-interpreter-interface = { path = "../crates/air-lib/interpreter-interface", default-features = false }
air-log-targets = { path = "../crates/air-lib/log-targets" }
air-lambda-ast = { path = "../crates/air-lib/lambda/ast" }
air-lambda-parser = { path = "../crates/air-lib/lambda/parser" }
air-trace-handler = { path = "../crates/air-lib/trace-handler" }
air-utils = { version = "0.1.0", path = "../crates/air-lib/utils" }
polyplets = { path = "../crates/air-lib/polyplets" }

serde = { version = "1.0.147", features = [ "derive", "rc" ] }
serde_json = "1.0.89"

boolinator = "2.4.0"
concat-idents = "1.1.4"
maplit = "1.0.2"
non-empty-vec = "0.2.3"
log = "0.4.17"
once_cell = "1.16.0"
fstrings = "0.2.3"
thiserror = "1.0.37"
semver = "1.0.14"
strum = "0.24"
strum_macros = "0.24"
tracing = "0.1.37"

[dev_dependencies]
air-test-utils = { path = "../crates/air-lib/test-utils" }
air-testing-framework = { path = "../crates/testing-framework" }
fluence-app-service = "0.22.1"
marine-rs-sdk = { version = "0.7.0", features = ["logger"] }

# the feature just silence a warning in the criterion 0.3.x.
criterion = { version = "0.3.3", features = ["html_reports"] }
csv = "1.1.5"
once_cell = "1.4.1"
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
serde_json = "1.0.61"

[[bench]]
name = "call_benchmark"
harness = false

[[bench]]
name = "chat_benchmark"
harness = false

[[bench]]
name = "create_service_benchmark"
harness = false

[[bench]]
name = "data_big_benchmark"
harness = false

[[bench]]
name = "data_long_benchmark"
harness = false
