[package]
name = "aquamarine"
version = "0.8.0"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "aquamarine_client"
crate-type = ["cdylib"]
path = "src/wasm_bindgen.rs"

[[bin]]
name = "aquamarine"
path = "src/fce.rs"

[dependencies]
interpreter-lib = { path = "../interpreter-lib" }

fluence = { git = "https://github.com/fluencelabs/rust-sdk", branch = "optimizations", features = ["logger"] }

# Keep 0.2.65 until this is resolved https://github.com/rustwasm/wasm-pack/issues/886
wasm-bindgen = "=0.2.65"

log = "0.4.11"
serde = { version = "=1.0.118", features = [ "derive", "rc" ] }
serde_json = "1.0"

[features]
fce = ["interpreter-lib/fce"]
