[package]
name = "stepper-lib"
version = "0.1.2"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "stepper_lib"
path = "src/lib.rs"

[dependencies]
air-parser = { path = "../crates/air-parser" }
fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }

serde = { version = "1.0.116", features = [ "derive", "rc" ] }
serde_derive = "1.0.116"
serde_sexpr = "0.1.0"

jsonpath_lib = "0.2.5"

boolinator = "2.4.0"
log = "0.4.11"
serde_json = "1.0"
wasm-bindgen = "0.2.68"

[dev_dependencies]
aqua-test-utils = { path = "../crates/test-utils" }
aquamarine-vm = { git = "https://github.com/fluencelabs/fce", features = ["raw-aquamarine-vm-api"] }

criterion = "0.3.3"
once_cell = "1.4.1"
env_logger = "0.7.1"
maplit = "1.0.2"
pretty_assertions = "0.6.1"
serde_json = "1.0.56"

[[bench]]
name = "call_benchmark"
harness = false

[[bench]]
name = "chat_benchmark"
harness = false

[[bench]]
name = "create_service_benchmark"
harness = false

[features]
# indicates that this library should be compiled for the wasm bindgen target
# otherwise it will be compiled to the FCE target
fce = []
