[package]
name = "aquamarine"
version = "0.1.2"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "aquamarine_client"
crate-type = ["cdylib"]
path = "src/wasm_bindgen.rs"

[[bin]]
name = "aquamarine"
path = "src/fce.rs"

[dependencies]
stepper-lib = { path = "../crates/stepper-lib" }

fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }
wasm-bindgen = "0.2.68"

log = "0.4.11"
serde_json = "1.0"

[features]
wasm_bindgen = ["wasm-bindgen/wasm_bindgen"]
