[package]
name = "aquamarine"
version = "0.1.3"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "aquamarine_client"
crate-type = ["cdylib"]
path = "src/wasm_bindgen.rs"

[[bin]]
name = "aquamarine"
path = "src/fce.rs"

[dependencies]
stepper-lib = { path = "../stepper-lib" }

fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"], branch = "logger-i32" }

# Keep 0.2.65 until this is resolved https://github.com/rustwasm/wasm-pack/issues/886
wasm-bindgen = "=0.2.65"

log = "0.4.11"
serde_json = "1.0"

[features]
fce = ["stepper-lib/fce"]
