[package]
name = "aquamarine"
version = "0.2.2"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "aquamarine_client"
crate-type = ["cdylib"]
path = "src/wasm_bindgen.rs"

[[bin]]
name = "aquamarine"
path = "src/fce.rs"

[dependencies]
stepper-lib = { path = "../stepper-lib" }

fluence = { version = "0.2.18", features = ["logger"] }

# Keep 0.2.65 until this is resolved https://github.com/rustwasm/wasm-pack/issues/886
wasm-bindgen = "=0.2.65"

log = "0.4.11"
serde = { version = "=1.0.118", features = [ "derive", "rc" ] }
serde_json = "1.0"

[features]
fce = ["stepper-lib/fce"]
