[package]
name = "avm-interface"
description = "Fluence AIR VM interfacing"
version = "0.32.1"
authors = ["Fluence DAO", "Cloudless Labs"]
edition = "2021"
license = "AGPL-3.0-only"
documentation = "https://docs.rs/avm-interface"
repository = "https://github.com/fluencelabs/aquavm/tree/master/avm/interface"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "avm_interface"
path = "src/lib.rs"

[dependencies]
air-interpreter-interface = { version = "0.19.0", path = "../../crates/air-lib/interpreter-interface", default-features = false }
air-interpreter-sede = { version = "0.1.0", path = "../../crates/air-lib/interpreter-sede", default-features = false }
air-utils = { version = "0.3.0", path = "../../crates/air-lib/utils" }
polyplets = { version = "0.7.0", path = "../../crates/air-lib/polyplets" }

thiserror = "1.0.50"
maplit = "1.0.2"
serde_json = "1.0.108"
serde = "1.0.190"
log = "0.4.20"
tracing = "0.1.40"
