[package]
name = "avm-server"
description = "Fluence AIR VM"
version = "0.33.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/avm-server"
repository = "https://github.com/fluencelabs/aquavm/tree/master/avm/server"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "avm_server"
path = "src/lib.rs"

[dependencies]
air-interpreter-interface = { version = "0.14.0", path = "../../crates/air-lib/interpreter-interface" }
air-utils = { version = "0.1.1", path = "../../crates/air-lib/utils" }
avm-data-store = { version = "0.7.0", path = "../../crates/data-store" }
marine-runtime = "0.29.0"
polyplets = { version = "0.4.1", path = "../../crates/air-lib/polyplets" }
avm-interface = { version = "0.29.0", path = "../../avm/interface" }

eyre = "0.6.8"
thiserror = "1.0.40"
maplit = "1.0.2"
serde_json = "1.0.95"
serde = "1.0.164"
log = "0.4.17"
parking_lot = "0.12.1"
tracing = "0.1.37"
fluence-keypair = { version = "0.10.1", default-features = false }
