[package]
name = "avm-server"
description = "Fluence AIR VM"
version = "0.37.0"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/avm-server"
repository = "https://github.com/fluencelabs/aquavm/tree/master/avm/server"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "avm_server"
path = "src/lib.rs"

[dependencies]
air-interpreter-interface = { version = "0.19.0", path = "../../crates/air-lib/interpreter-interface" }
air-interpreter-sede = { version = "0.1.0", path = "../../crates/air-lib/interpreter-sede" }
air-utils = { version = "0.3.0", path = "../../crates/air-lib/utils" }
avm-data-store = { version = "0.7.9", path = "../../crates/data-store" }
marine-runtime = {version = "0.36.2", git = "https://github.com/fluencelabs/marine", branch = "feat/async-call"}
marine-wasmtime-backend = {version = "0.6.0", git = "https://github.com/fluencelabs/marine", branch = "feat/async-call"}
marine-wasm-backend-traits = {version = "0.6.0", git = "https://github.com/fluencelabs/marine", branch = "feat/async-call"}
polyplets = { version = "0.7.0", path = "../../crates/air-lib/polyplets" }
avm-interface = { version = "0.32.1", path = "../../avm/interface" }

eyre = "0.6.11"
thiserror = "1.0.50"
maplit = "1.0.2"
serde_json = "1.0.108"
serde = "1.0.190"
log = "0.4.20"
parking_lot = "0.12.1"
tracing = "0.1.40"
fluence-keypair = { version = "0.10.4", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
