[package]
name = "air-interpreter-wasm"
version = "0.0.1"
authors = ["Fluence Labs"]
description = "Distribution of AIR interpreter as .wasm"
license = "Apache-2.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "aquamarine.wasm"
]

[build-dependencies]
serde_json = "1.0.60"
serde = "1.0.118"
serde_derive = "1.0.118"
