[package]
name = "air-interpreter-wasm"
version = "0.1.0"
authors = ["Fluence Labs"]
description = "Distribution of AIR interpreter as .wasm"
license = "Apache-2.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "air_interpreter_server.wasm"
]

[build-dependencies]
built = "0.4.4"
