[package]
name = "air-parser"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[build-dependencies]
lalrpop = { git = "https://github.com/fluencelabs/lalrpop", branch = "cloneable_parser", version = "0.19.1", features = ["lexer"] }

[dependencies]
lalrpop-util = { git = "https://github.com/fluencelabs/lalrpop", branch = "cloneable_parser", version = "0.19.1", features = ["lexer"] }
regex = "1.4.1"
codespan = "0.9.5"
codespan-reporting = "0.9.5"

[dev-dependencies]
fstrings = "0.2.3"
criterion = "0.3.3"

[[bench]]
name = "parser"
harness = false
