[package]
name = "air-parser"
version = "0.4.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[build-dependencies]
lalrpop = { git = "https://github.com/fluencelabs/lalrpop", branch = "cloneable_parser", version = "0.19.1", features = ["lexer"] }

[dependencies]
lalrpop-util = { git = "https://github.com/fluencelabs/lalrpop", branch = "cloneable_parser", version = "0.19.1", features = ["lexer"] }
regex = "1.4.1"
codespan = "0.9.5"
codespan-reporting = "0.9.5"

# TODO: hide serde behind a feature
serde = { version = "=1.0.118", features = ["rc"] }
serde_json = "=1.0.61"

itertools = "0.10.0"

thiserror = "1.0.23"

[dev-dependencies]
fstrings = "0.2.3"
criterion = "0.3.3"

[[bench]]
name = "parser"
harness = false
