[package]
name = "air-parser"
version = "0.7.1"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
publish = false

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1.5.4"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
multimap = "0.8.3"

# TODO: hide serde behind a feature
serde = { version = "1.0.118", features = ["rc", "derive"] }
serde_json = "1.0.61"

itertools = "0.10.0"

thiserror = "1.0.23"

[dev-dependencies]
fstrings = "0.2.3"
criterion = "0.3.3"

[[bench]]
name = "parser"
harness = false
