[package]
name = "air-beautifier"
version = "0.3.1"
description = "AIR human-readable format transformer library"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/aquavm"
documentation = "https://docs.rs/air-beautifier"
keywords = ["fluence", "air", "beautifier"]

[lib]
name = "air_beautifier"
path = "src/lib.rs"

[dependencies]
aquavm-air-parser = { version = "0.10.0", path = "../air-lib/air-parser" }
itertools = "0.10.5"
thiserror = "1.0.40"
