[package]
name = "avm-data-store"
version = "0.6.0"
description = "Definition of the AVM DataStore trait"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/avm-data-store"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/data-store"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "avm_data_store"
path = "src/lib.rs"

[dependencies]
avm-interface = { version = "0.28.2", path = "../../avm/interface"}
serde = { version = "1.0.155", features = ["derive"] }
serde_bytes = "0.11.9"

[dev-dependencies]
serde_json = "1.0.94"
