[package]
name = "aqua-interpreter-interface"
description = "Interface of the Aquamarine interpreter"
version = "0.5.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "aqua_interpreter_interface"
path = "src/lib.rs"

[dependencies]
fluence = "0.6.1"
fluence-it-types = "0.3.0"

serde = "=1.0.118"
