[package]
name = "air-interpreter-interface"
description = "Interface of the AIR interpreter"
version = "0.5.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "air_interpreter_interface"
path = "src/lib.rs"

[dependencies]
fluence = "0.6.5"
fluence-it-types = "0.3.0"

serde = "=1.0.118"
