[package]
name = "air-interpreter-interface"
description = "Interface of the AIR interpreter"
version = "0.6.1"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/air-interpreter-interface"
repository = "https://github.com/fluencelabs/air"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[lib]
name = "air_interpreter_interface"
path = "src/lib.rs"

[dependencies]
marine-rs-sdk = "0.6.11"
fluence-it-types = "0.3.0"

serde = "1.0.118"
