[package]
name = "air-interpreter-wasm"
version = "0.63.0"
description = "Distribution of AIR interpreter as .wasm"
authors = ["Fluence Labs"]
license = "AGPL-3.0-only"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "air_interpreter_server.wasm"
]
documentation = "https://docs.rs/air-interpreter-wasm"
repository = "https://github.com/fluencelabs/aquavm/tree/master/crates/interpreter-wasm"
keywords = ["fluence", "air", "webassembly", "programming-language"]
categories = ["wasm"]

[build-dependencies]
built = "0.7.1"
