[package]
name = "polyplets"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "polyplets"
path = "src/lib.rs"

[dependencies]
#fluence = { version = "0.4.2", features = ["logger"] }
fluence = { version = "0.4.2", features = ["logger"] }
serde = { version = "=1.0.118", features = ["rc"] }
