[package]
name = "stepper-interface"
description = "Interface of the Aquamarine stepper"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[lib]
name = "stepper_interface"
path = "src/lib.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk" }
wasmer-wit = { package = "wasmer-interface-types-fl", version = "=0.17.20" }

serde = "1.0.118"
