[package]
name = "stepper-interface"
description = "Interface of the Aquamarine stepper"
version = "0.1.1"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "stepper_interface"
path = "src/lib.rs"

[dependencies]
fluence = "=0.2.13"
fluence-it-types = "0.1.0"

serde = "1.0.118"
